@@ -1,8 +1,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Bioinformatics Tools Based on R/Linux/JavaScript/Python | 
-		v0.4.2
+	<title>Bioinformatics Toolkit | 
+		v0.5.0
 	</title>
 	<script src="static/js/tongji.js"></script>
 
@@ -33,7 +33,7 @@
 <div class=wrap>
 	<img src="/images/tool_logo.png" style="float:left; margin-right:10px;" />
 	<h1>bioToolKit <span class="light smaller"> 
-		<br />Bioinformatics Toolkit: R/Python3/shell/js/  
+		<br />Bioinformatics Toolkit: R/Python3/shell/js/C/C++  
 		<br />QQ group: 187923577</span></h1>
 
 
@@ -46,6 +46,7 @@
 		<li><a href="tool/revCom.html">revCom</a> A tool for DNA translation, reverse complement.</li>
 		
 		<li><a href="JavaScript/mathJax_demo.html">LaTeX Math Preview</a> to preview LaTeX Math expression, based on MathJax.js</li>
+		<li><a href="JavaScript/code_reader.html">Code Reader</a> to preview R or Python code on server with some highlight by prism.js.</li>
 
 
 		<h3>Linux Tools</h3>
